Fix header alignment

--- a/foundations/01-css-methods/styles.css
+++ b/foundations/01-css-methods/styles.css
@@ -1,7 +1,7 @@
 div {
     background-color: red;
     font-size: 32px;
-    align-content: center;
     font-weight: bold;
     color: white;
+    text-align: center;
 }
